# trading-protocol

./: .dockerignore  .gitignore  01_context_engine.pine  Dockerfile  README.md  README_PY.md  RESEARCH.md  pyproject.toml
.github/workflows/: deploy.yml
deploy/: DEPLOY.md  deploy.sh  github-oidc.tf  main.tf  terraform.tfvars.example  vpc-endpoints.tf
fsp/: __init__.py  config.py
fsp/backtest/: diagnose.py  engine.py  intraday_engine.py  intraday_report.py  report.py
fsp/cli/: chart.py  main.py
fsp/context/: bias.py  cycle.py  levels.py  sessions.py  smt.py
fsp/data/: feed.py  twelve.py  types.py
fsp/grader/: precompute.py  setup.py
fsp/ict/: __init__.py  backtest.py  bias.py  draw.py  engine.py  liquidity.py  premium_discount.py  shadow.py  smt.py  structure.py
fsp/journal/: db.py  dynamo.py  resolver.py  review.py
fsp/llm/: __init__.py  backtest.py  context.py  learner.py  validator.py
fsp/ml/: __init__.py  features.py  trainer.py
fsp/notify/: chat.py  config.py  daily_report.py  live.py  telegram.py
fsp/signals/: __init__.py  alpha.py  asia_hl.py  base.py  breakout.py  level_ob.py  momentum.py  scanner.py
fsp/structure/: displacement.py  fvg.py  order_blocks.py  swings.py
fsp/tests/: test_chat.py  test_context.py  test_daily_report.py  test_dynamo_journal.py  test_ict_backtest.py  test_ict_draw.py  test_ict_engine.py  test_ict_liquidity.py  test_ict_premium_discount.py  test_ict_shadow.py  test_ict_smt.py  test_ict_structure.py  test_llm_validator.py  test_ml_features.py  (+7 more)
research/: .gitignore  multi_pair_dataset.py  training_data.parquet
(+10 files in other folders)
