[project]
name = "fsp"
version = "0.1.0"
description = "4-Step Protocol — standalone FX trade-signal engine"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "dukascopy-python>=3",
    "yfinance>=0.2.40",
    "python-telegram-bot>=21",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "plotly>=5.22",
    "rich>=13",
    "typer>=0.12",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
fsp = "fsp.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
target-version = "py311"
